# ELAN-0c00-Support-Unofficial-

./: .gitattributes  README.md
.gnome-builder/flatpak/etc/installations.d/: gnome-builder.conf
.gnome-builder/flatpak/repo/: config  flathub-beta.filter
.gnome-builder/flatpak/repo/tmp/cache/summaries/: flathub-beta-x86_64-031730928a33364b61fe25fd8e265217d7fa168a1aa7318202270d0266d7c7bc.sub  flathub-beta.idx  flathub.idx  gnome-nightly-x86_64-1c2d423a22fc60472d9ce2a35c8b622f309d258a2a1fa94548abf8b2304ab632.sub  gnome-nightly.idx
.gnome-builder/manuals/: manuals.sqlite-shm
ELAN_0c00_support_v0.1/: hyprlandfix.sh  launch.sh  shortcut.desktop
ELAN_0c00_support_v0.1/lib/: libQt6Core.so.6  libQt6DBus.so.6  libQt6Gui.so.6  libQt6Multimedia.so.6  libQt6Multimedia.so.6.11.1  libQt6MultimediaQuick.so.6  libQt6MultimediaQuick.so.6.11.1  libQt6Network.so.6  libQt6OpenGL.so.6  libQt6OpenGL.so.6.11.1  libQt6Qml.so.6  libQt6QmlMeta.so.6  libQt6QmlMeta.so.6.11.1  libQt6QmlModels.so.6  libQt6QmlModels.so.6.11.1  libQt6QmlWorkerScript.so.6  libQt6QmlWorkerScript.so.6.11.1  libQt6Quick.so.6  libdouble-conversion.so.3  libfontconfig.so.1  libharfbuzz.so.0  libmd4c.so.0  libmd4c.so.0.5.3  libusb-1.0.so.0  libusb-1.0.so.0.6.0  libxkbcommon.so.0
ELAN_0c00_support_v0.1/qml/QtQuick/VirtualKeyboard/Plugins/Hunspell/: plugins.qmltypes  qmldir
ELAN_0c00_support_v0.1/qml/QtQuick/VirtualKeyboard/Plugins/Thai/: plugins.qmltypes
ELAN_0c00_support_v0.1/qml/QtQuick/VirtualKeyboard/Styles/Breeze/: qmldir
PrejectOp/: CMakeLists.txt  TestPage.qml  about.qml  main.cpp
PrejectOp/scripts/: UsbBridge.h  elan0c00.c  elan_auth  enroll_handler.c  enroll_handler.h  enrollbridge.h  integration.h  removal.h  remove_handler.c  remove_handler.h  removebridge.h  usb_handler.c  usb_handler.h
